--- a/app/views/users/_edit_profile.html.erb
+++ b/app/views/users/_edit_profile.html.erb
@@ -1,4 +1,4 @@
-<%= render layout: 'gray_box', locals: {title: 'Rediger personalia', id: 'personal-info'} do %>
+<%= render layout: 'gray_box', locals: {title: 'Rediger profil', id: 'personal-info'} do %>
 
     <%- if @user.errors.any? -%>
         <div>
