--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -57,25 +57,25 @@
                             <span class="booking-price-summary__label">
                                 Antall dager:
                             </span>
-                            <span class="booking-price-summary__value"></span>
+                            <span class="booking-price-summary__value">?</span>
                         </div>
                         <div class="booking-price-summary__row">
                             <span class="booking-price-summary__label">
                                 Pris per dag:
                             </span>
-                            <span class="booking-price-summary__value"></span>
+                            <span class="booking-price-summary__value">?</span>
                         </div>
                         <div class="booking-price-summary__row">
                             <span class="booking-price-summary__label">
                                 Totalt:
                             </span>
-                            <span class="booking-price-summary__value"></span>
+                            <span class="booking-price-summary__value">?</span>
                         </div>
                         <div class="booking-price-summary__row">
                             <span class="booking-price-summary__label">
                                 Depositum:
                             </span>
-                            <span class="booking-price-summary__value"></span>
+                            <span class="booking-price-summary__value">?</span>
                         </div>
                      </div>
                  </div>
