--- a/app/views/accident_reports/_form.html.erb
+++ b/app/views/accident_reports/_form.html.erb
@@ -1,9 +1,9 @@
 <%= form_for @accident_report, url: { action: 'create' }, html: { multipart: true } do |f| %>
     <% if @accident_report.errors.any? %>
         <div id="error_explanation">
-            <h2><%= pluralize(@accident_report.errors.count, 'error') %> prohibited this accident_report from being saved:</h2>
+            <h2><%= @accident_report.errors.count %> feil forhindret at du fikk levert skademelding:</h2>
             <ul>
-                <% @accident_report.errors.full_messages.each do |message| %>
+                <% @accident_report.errors.each do |attribute,message| %>
                     <li><%= message %></li>
                 <% end %>
             </ul>
