Proper padding when user has no feedback or description

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -279,3 +279,9 @@
     overflow: hidden;
     text-overflow: ellipsis;
 }
+
+.profile-self-ads-section {
+    &__inner {
+        padding: $standard-spacing;
+    }
+}
