Nicer looking earnings summary when no money earned yet

--- a/app/views/financial_transactions/_financial_transaction_list.html.erb
+++ b/app/views/financial_transactions/_financial_transaction_list.html.erb
@@ -10,5 +10,9 @@
                 <%= render @financial_transactions %>
             </tbody>
         </table>
+    <% else %>
+        <div>
+            Du har foreløpig ikke tjent noe på utleie det siste året.
+        </div>
     <% end %>
 <% end %>
