Pick up mangopay base url from document

--- a/app/views/user_payment_cards/_form.html.erb
+++ b/app/views/user_payment_cards/_form.html.erb
@@ -5,6 +5,7 @@
          data-card-access-key="<%= @user_payment_card[:access_key] %>"
          data-card-registration-id="<%= @user_payment_card[:card_registration_id] %>"
          data-card-client-id="<%= MangoPay.configuration.client_id %>"
+         data-mangopay-base-url="FIXME_INSERT_ENV_SPECIFIC_URL_HERE"
          class="card-input">
 
         <div class="card-input__card-holder">
