translate string for error in credit card registration, if mangopay is unavailable

--- a/app/views/user_payment_cards/new.html.erb
+++ b/app/views/user_payment_cards/new.html.erb
@@ -5,8 +5,7 @@
             <% if @user_payment_card[:preregistration_data].present? %>
               <%= render 'form' %>
             <% else %>
-                TRANSLATEME: ERROR, We are sorry but adding of creditcard is temporarely unavailable.
-                We are working with our payment provider to fix this as soon as possible!
+                Det er ikke mulig å registerer ditt kreditt kort for øyeblikket.
             <% end %>
         </div>
         <div class="four columns"> &nbsp;
