--- a/app/views/ads/show.html.erb
+++ b/app/views/ads/show.html.erb
@@ -21,20 +21,22 @@
             <div data-hero-click data-image-index="9999">
                 <%= render partial: 'shared/hero_image', locals: { ad: @ad } %>
             </div>
-            <div class="gallery-thumb-bar" data-thumb-bar>
-                <div class="gallery-thumb" data-image-index="0">
-                    <%= image_tag @ad.safe_image_url(:thumb), size: '90x60' %>
-                    <span class="gallery-thumb__count">
-                        <%= @ad.ad_images.size %> bilder
-                    </span>
-                </div>
-                <% @ad.ad_images.limit(9).offset(1).each_with_index do |image, n| %>
-                    <div class="gallery-thumb <%= "gallery-thumb--no-#{n + 1}" %>"
-                        data-image-index="<%= n + 1 %>">
-                        <%= image_tag image.image.url(:thumb), size: '90x60' %>
+            <% if @ad.ad_images.size > 1 %>
+                <div class="gallery-thumb-bar" data-thumb-bar>
+                    <div class="gallery-thumb" data-image-index="0">
+                        <%= image_tag @ad.safe_image_url(:thumb), size: '90x60' %>
+                        <span class="gallery-thumb__count">
+                            <%= @ad.ad_images.size %> bilder
+                        </span>
                     </div>
-                <% end %>
-            </div>
+                    <% @ad.ad_images.limit(9).offset(1).each_with_index do |image, n| %>
+                        <div class="gallery-thumb <%= "gallery-thumb--no-#{n + 1}" %>"
+                            data-image-index="<%= n + 1 %>">
+                            <%= image_tag image.image.url(:thumb), size: '90x60' %>
+                        </div>
+                    <% end %>
+                </div>
+            <% end %>
         </div>
     </div>
     <div class="u-only-on-bigscreen parallel-booking-box-holder">
