--- a/app/views/ads/_ad_input_copy.html.erb
+++ b/app/views/ads/_ad_input_copy.html.erb
@@ -9,21 +9,19 @@
     <h4>Verifisering</h4>
 
     <p>
-        Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg kan brukerne
-        koble seg til Plendit med Google-, Facebook- og SPiD-kontoer. I tilfeller hvor førerkort eller båtførerbevis er nødvendig for å leie, vil vi også be leietaker om dette. 
+        Plendit verifiserer brukernes identitet med mobilnummer og e-post. I tillegg må alle leietakere få godkjent en gyldig form for legitimasjon. 
     </p>
 
     <h4>Betaling</h4>
     <p>
-        Betalingen skjer trygt gjennom Plendit. Leiesumen reserveres ved bestilling og legges til utbetaling
-        dagen etter leieforholdet starter. 
+        Betalingen skjer trygt på Plendit gjennom betalingsleverandøren Mangopay.
     </p>
 
     <h4>Trygghet</h4>
 
     <p>
         <%= image_tag "logos/if_150x148.png", alt: "", class: "ad-input-copy__badge", size: "70x70" %>
-        Alle ting du leier ut på Plendit er forsikret av IF.
+        Alt du leier ut på Plendit er forsikret av IF, som utleier har du ingen egenandel.
         Les mer om din trygghet som utleier <%= link_to "her", Plendit::Application.config.x.customerservice.insurance_info, target: '_blank' %>.
 
     </p>
