Accident report form to most recent model

--- a/app/views/accident_reports/_form.html.erb
+++ b/app/views/accident_reports/_form.html.erb
@@ -24,8 +24,8 @@
     </div>
     <br>
     <div class="row">
-        <%= f.label :location_address_line, 'Hvor skjedds skaden?' %>
-        <%= f.text_field :location_address_line, class: 'u-full-width' %>
+        <%= f.label :location_line, 'Hvor skjedds skaden?' %>
+        <%= f.text_field :location_line, class: 'u-full-width' %>
     </div>
     <br>
     <div class="row">
