--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -60,7 +60,6 @@
     }
 }
 
-
 .booking-insurance-box {
     &__title {
 
@@ -83,9 +82,9 @@
         display: inline-block;
         width: 22px;
         height: 22px;
-        background-image: url(star_empty.svg);
+        background-image: url(image-path("star_empty.svg"));
         &--full, &:hover {
-            background-image: url(star_full.svg);
+            background-image: url(image-path("star_full.svg"));
         }
 
     }
