--- a/app/views/bookings/_booking_feedback.html.erb
+++ b/app/views/bookings/_booking_feedback.html.erb
@@ -6,7 +6,7 @@
 
             <p>
                 Hvor god var din opplevelse? Din tilbakemelding blir synlig
-                for andre Plendit-brukere.
+                for andre Plendit-brukere. Det er frivillig å gi tilbakemelding.
             </p>
 
             <p>
